--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,1 +1,9 @@
 /* Variables for Backstage Talks Magazine */
+
+// Colors
+
+$lightblue: #00c1b5;
+$yellow: #ffbe00;
+$red: #e30512;
+$orange: #ff651a;
+$darkblue: #1d3fbb;
