--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,8 @@
-/* SCSS voor Backstage Talks Magazine */
+/* SCSS for Backstage Talks Magazine */
+
+@charset "UTF-8";
+@import "./base/fonts";
+@import "./base/mixins";
+@import "./base/reset";
+@import "./base/variables";
 
