--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,1 +1,4 @@
 /* Fonts for Backstage Talks Magazine */
+
+// Roboto
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap')
