Styling with media screen up to fullscreen

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,7 +42,6 @@ header {
         
             img { 
                 width: 80%; 
-                max-width: 420px;
                 height: auto;
                 margin: 0 auto;
             }
@@ -74,6 +73,8 @@ footer {
         text-align: center; 
         padding: 0 15px;
 
+        .footerText { background-color: transparent; }
+
         .copyright {
             font-size: 12px;
             font-weight: normal;
@@ -91,6 +92,80 @@ footer {
         }
         .menu {
             display: none;
+            position: absolute;
+            bottom: 0;
+            right: 15px;
+            width: 200px;
+            line-height: 1.6;
+            font-size: 18px;
+            text-align: right;
+            margin-bottom: 1em;
+        }
+    }
+}
+
+@media screen and (min-width: 543px) {
+    .wrapper .issue .cover img { width: 420px; }
+}
+
+@media screen and (min-width: 767px) {
+    header img { width: 260px; }
+
+    footer {
+        display: flex;
+
+        .description {
+            text-align: left;
+            width: 33.33%;
+            padding: 0 15px;
+        }
+        .info {
+            width: 66.67%;
+            position: relative;
+
+            .contact {
+                position: absolute;
+                right: 15px;
+                bottom: 0;
+                text-align: right;
+                margin: 0 0 1em;;
+            }
+        } 
+    }
+}
+
+@media screen and (min-width: 992px) and (min-height: 650px) {
+    body { overflow: hidden; }
+    
+    header {
+        position: absolute;
+        padding-top: 20px;
+        left: 15px;
+        top: 0;
+    }
+
+    .wrapper .issue { padding-top: 0; }
+
+    footer {
+        .description {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            background-color: transparent;
+            width: 320px;
+        }
+        .info {
+            position: unset;
+
+            .contact {
+                position: absolute;
+                right: 15px;
+                top: 20px;
+            }
+
+            .menu {
+                display: block;
+            }
         }
     }
 }
