--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -187,6 +187,7 @@ footer {
         .wrapper {
             height: 100vh;
             scroll-snap-align: start;
+            scroll-snap-stop: always;
             position: relative;
         }
     }
