Fix issue height below 650px height

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,7 +1,6 @@
 /* Variables for Backstage Talks Magazine */
 
 // Colors
-
 $white: #fff;
 $black: #251d20;
 $lightblue: #00c1b5;
@@ -9,3 +8,6 @@ $yellow: #ffbe00;
 $red: #e30512;
 $orange: #ff651a;
 $darkblue: #1d3fbb;
+
+// Height
+$issueMinHeight : 750px;
