--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,6 +49,7 @@ header {
 //main content
 .wrapper {
     height: 100vh;
+    min-height: $issueMinHeight;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -186,6 +187,7 @@ footer {
     
         .wrapper {
             height: 100vh;
+            min-height: auto;
             scroll-snap-align: start;
             scroll-snap-stop: always;
             position: relative;
